Bug 636079 - Refactor JSON.stringify code to more closely conform to the specification, fixing a bunch of known problems in the process.  r=pbiggar

Bugs fixed:
* toJSON is now invoked with an argument list consisting of the property name.
* In rare circumstances toJSON was invoked twice for a single object-valued
  property.  This error has now been corrected.
* Stringification no longer throws if the toJSON property of an object being
  stringified is an object but is not callable.
* The replacer function is invoked exactly once for properties of objects
  when those properties are stringified.
* If a replacer function is to be called, it will receive array indexes as
  strings instead of numbers, per ES5.

Other improvements include:

* Speedier internal methods are used, rather than slow external APIs.
* Argument types are more specific (e.g. the "holder" argument is an object).
* Logic to determine when to call the replacer function is unnecessary and has
  been removed.